--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Kopei's Home
 subtitle: ''
 description: ''
 keywords:
@@ -91,26 +91,6 @@ pagination_dir: page
 # Include / Exclude file(s)
 ## include:/exclude: options only apply to the 'source/' folder
 include: 
-  - AI
-  - algo
-  - architecture
-  - BI
-  - bigdata
-  - cloud
-  - data\ warehouse
-  - database
-  - Devices
-  - Devops
-  - docker
-  - ERP
-  - frontend
-  - Healthcare
-  - java
-  - kubernetes
-  - middleware
-  - openshit
-  - python
-  - Standard
 exclude:
 ignore:
 
@@ -123,3 +103,13 @@ theme: redefine
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: ''
+
+toc:
+  maxdepth: 3
+  class: toc
+  slugify: transliteration
+  decodeEntities: false
+  anchor:
+    position: after
+    symbol: '#'
+    style: header-anchor
