--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kopeo-site",
+  "name": "kopei-site",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -23,7 +23,6 @@
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
-    "hexo-theme-landscape": "^0.0.3",
     "hexo-theme-redefine": "^0.5.0"
   }
 }
