--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -241,7 +241,7 @@ lazyload:
 # CDN
 # ---------------------------------------------------------------------------------------
 cdn:
-  enable: false
+  enable: true
 
 # ---------------------------------------------------------------------------------------
 # PJAX
