--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -50,7 +50,7 @@ style:
     title_color:
       light: "#fff" # first screen title color (light mode)
       dark: "#d1d1b6" # first screen title color (dark mode)
-    description: 一元复始 万物升辉 # the title in the middle of the first screen. HTML supported (e.g. svg html code of your logo)
+    description: 两仪立焉 朋来无咎 # the title in the middle of the first screen. HTML supported (e.g. svg html code of your logo)
 
   # Scroll style settings
   scroll:
