--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -264,7 +264,7 @@ footer:
   runtime: true # show website running time or not
   start_time: 2017/01/01 00:00:00 # the starting time of your website, format: yyyy/mm/dd hh:mm:ss
   customize:  # customize footer message, can be html code
-  icp: # ICP record number of your website, Can be null
+  icp: null # ICP record number of your website, Can be null
 
 # ---------------------------------------------------------------------------------------
 # Redefine Theme version (Please dont modify it)
