--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -54,7 +54,7 @@ style:
       title: 2.8rem # first screen title font size
       subtitle: 1.5rem # first screen subtitle font size
     line_height: 1.2 # first screen title line height
-    title: 六气顺布 乘龙御天 # the title in the middle of the first screen. HTML supported (e.g. svg html code of your logo)
+    title: 七星连珠 吉无不利 # the title in the middle of the first screen. HTML supported (e.g. svg html code of your logo)
     subtitle: 
       enable: false
       list: []
