--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -54,7 +54,7 @@ style:
       title: 2.8rem # first screen title font size
       subtitle: 1.5rem # first screen subtitle font size
     line_height: 1.2 # first screen title line height
-    title: 八卦成列 森罗万象 # the title in the middle of the first screen. HTML supported (e.g. svg html code of your logo)
+    title: 十方俱灭 无量量劫 # the title in the middle of the first screen. HTML supported (e.g. svg html code of your logo)
     subtitle: 
       enable: false
       list: []
